test/org/midica/testfiles/failing/eff-func-bend-gt-range.midica
INCLUDE inc/instruments.midica

0: pitch_bend_range.set(2.0)
0: bend.wait.set(2.3)
